--- a/client/src/components/DeleteModal/DeleteModal.scss
+++ b/client/src/components/DeleteModal/DeleteModal.scss
@@ -7,8 +7,8 @@
 .modal {
   position: fixed;
   display: flex;
-  top: 20px;
   left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   background: rgba(19, 24, 44, 0.6);
