--- a/client/src/pages/EditWarehouse/EditWarehouse.scss
+++ b/client/src/pages/EditWarehouse/EditWarehouse.scss
@@ -6,7 +6,7 @@
 .editWarehouse {
   height: 100vh;
   width: 100vw;
-  background-color: $background-light;
+  margin-top: -4rem;
   padding-bottom: 6rem;
 
   &__container {
