--- a/client/src/pages/Warehouses/Warehouses.scss
+++ b/client/src/pages/Warehouses/Warehouses.scss
@@ -5,7 +5,7 @@
 
 .warehouses {
   width: 100vw;
-  background-color: $background-light;
+  margin-top: -4rem;
   padding-bottom: 6rem;
 
   @include tablet {
@@ -22,6 +22,7 @@
     justify-content: center;
     background-color: white;
     margin: 0rem 1rem;
+
     border-radius: 0.25rem;
     box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
 
@@ -87,6 +88,9 @@
   &__button {
     font-family: "Titillium Web Semi Bold";
     font-size: 0.8125rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: white;
     background-color: $instock-indigo;
     border: none;
